--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.3.0",
         "framer-motion": "^10.16.12",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.11.0",
-        "react-type-animation": "^3.2.0"
+        "gsap": "^3.13.0",
+        "lucide-react": "^0.544.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
+        "react-icons": "^4.12.0",
+        "react-type-animation": "^3.2.0",
+        "three": "^0.180.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
